--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  enum_to_string: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  gap: ^2.0.0
 
 dev_dependencies:
   flutter_test:
